--- a/Frontend/src/app/features/projects/project-detail/project-detail.component.html
+++ b/Frontend/src/app/features/projects/project-detail/project-detail.component.html
@@ -1,14 +1,16 @@
-<div class="project-detail-container" *ngIf="project$ | async as project; else loading">
+@if(project$ | async; as project){
+<div class="project-detail-container">
     <div class="project-header">
         <h1>{{ project.name }}</h1>
         <p>{{ project.description }}</p>
     </div>
 
     <nav mat-tab-nav-bar [tabPanel]="tabPanel">
-        <a mat-tab-link *ngFor="let link of navLinks" [routerLink]="link.path" routerLinkActive #rla="routerLinkActive"
-            [active]="rla.isActive">
+        @for (link of navLinks; track link.path) {
+        <a mat-tab-link [routerLink]="link.path" routerLinkActive #rla="routerLinkActive" [active]="rla.isActive">
             {{ link.label }}
         </a>
+        }
     </nav>
 
     <div class="tab-content">
@@ -17,9 +19,11 @@
         </mat-tab-nav-panel>
     </div>
 </div>
-
+}
+@else{
 <ng-template #loading>
     <div class="loading-spinner">
         <mat-spinner></mat-spinner>
     </div>
 </ng-template>
+}
