--- a/Frontend/src/app/features/sprints/sprint-list/sprint-list.component.html
+++ b/Frontend/src/app/features/sprints/sprint-list/sprint-list.component.html
@@ -6,16 +6,20 @@
 
     <mat-list>
         <div mat-subheader>Active</div>
-        <mat-list-item *ngFor="let sprint of activeSprints$ | async">
+        @for (sprint of activeSprints$ | async; track $index) {
+        <mat-list-item>
             <mat-icon matListItemIcon>directions_run</mat-icon>
             <div matListItemTitle>{{ sprint.name }}</div>
             <div matListItemLine>{{ sprint.startDate | date }} - {{ sprint.endDate | date }}</div>
         </mat-list-item>
+        }
 
         <div mat-subheader>Future</div>
-        <mat-list-item *ngFor="let sprint of futureSprints$ | async">
+        @for (sprint of futureSprints$ | async; track $index) {
+        <mat-list-item>
             <mat-icon matListItemIcon>event_note</mat-icon>
             <div matListItemTitle>{{ sprint.name }}</div>
         </mat-list-item>
+        }
     </mat-list>
 </div>
