--- a/Frontend/src/app/shared/components/navbar/navbar.component.html
+++ b/Frontend/src/app/shared/components/navbar/navbar.component.html
@@ -7,7 +7,8 @@
 
     <span class="spacer"></span>
 
-    <ng-container *ngIf="userSignal() as user">
+    @if(userSignal(); as user){
+    <ng-container>
         <span class="user-name">{{ user.fullName }}</span>
         <button mat-icon-button [matMenuTriggerFor]="userMenu">
             <mat-icon>account_circle</mat-icon>
@@ -24,4 +25,5 @@
             </button>
         </mat-menu>
     </ng-container>
+    }
 </mat-toolbar>
